[tool.poetry]
name = "python-utils-traveler"
version = "0.0.13"
description = "Personal python utilities"
authors = ["Ryan Bui <ryan.bui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "python_utils"
